<ui version="4.0" >
 <class>ReplaceDialog</class>
 <widget class="QDialog" name="ReplaceDialog" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>518</width>
    <height>262</height>
   </rect>
  </property>
  <property name="windowTitle" >
   <string>Find or Replace a text</string>
  </property>
  <layout class="QVBoxLayout" >
   <property name="spacing" >
    <number>6</number>
   </property>
   <property name="leftMargin" >
    <number>9</number>
   </property>
   <property name="topMargin" >
    <number>9</number>
   </property>
   <property name="rightMargin" >
    <number>9</number>
   </property>
   <property name="bottomMargin" >
    <number>9</number>
   </property>
   <item>
    <layout class="QGridLayout" >
     <property name="leftMargin" >
      <number>0</number>
     </property>
     <property name="topMargin" >
      <number>0</number>
     </property>
     <property name="rightMargin" >
      <number>0</number>
     </property>
     <property name="bottomMargin" >
      <number>0</number>
     </property>
     <property name="horizontalSpacing" >
      <number>6</number>
     </property>
     <property name="verticalSpacing" >
      <number>6</number>
     </property>
     <item row="1" column="0" >
      <widget class="QCheckBox" name="m_replaceCheckBox" >
       <property name="whatsThis" >
        <string>&t;p>If checked, &lt;b>XINX&lt;/b> replace the searched string by this  sting.&lt;/p>
&lt;p>If the search string is a &lt;i>regular expression&lt;/i>, you can use \1 or \2 for captured string. Captured string in the find string is in bracket.&lt;/p></string>
       </property>
       <property name="text" >
        <string>&amp;Replace by :</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1" >
      <widget class="QComboBox" name="m_comboFind" >
       <property name="whatsThis" >
        <string>&lt;p>Text to search in the editor. The search string can be &lt;i>string literal&lt;/i> or a &lt;i>regular expression&lt;/i> (if the corresponding checkbox is checked).&lt;/p>
&lt;p>&lt;b>XINX&lt;/b> keep history of searched text.&lt;/p></string>
       </property>
       <property name="editable" >
        <bool>true</bool>
       </property>
       <property name="currentIndex" >
        <number>-1</number>
       </property>
       <property name="insertPolicy" >
        <enum>QComboBox::InsertAlphabetically</enum>
       </property>
      </widget>
     </item>
     <item row="0" column="0" >
      <widget class="QLabel" name="label" >
       <property name="sizePolicy" >
        <sizepolicy vsizetype="Preferred" hsizetype="Minimum" >
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="text" >
        <string>Find &amp;what :</string>
       </property>
       <property name="buddy" >
        <cstring>m_comboFind</cstring>
       </property>
      </widget>
     </item>
     <item row="1" column="1" >
      <widget class="QComboBox" name="m_comboReplace" >
       <property name="enabled" >
        <bool>false</bool>
       </property>
       <property name="editable" >
        <bool>true</bool>
       </property>
       <property name="insertPolicy" >
        <enum>QComboBox::InsertAlphabetically</enum>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QGridLayout" >
     <property name="leftMargin" >
      <number>0</number>
     </property>
     <property name="topMargin" >
      <number>0</number>
     </property>
     <property name="rightMargin" >
      <number>0</number>
     </property>
     <property name="bottomMargin" >
      <number>0</number>
     </property>
     <property name="horizontalSpacing" >
      <number>6</number>
     </property>
     <property name="verticalSpacing" >
      <number>6</number>
     </property>
     <item row="1" column="1" >
      <spacer>
       <property name="orientation" >
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" >
        <size>
         <width>20</width>
         <height>40</height>
        </size>
       </property>
      </spacer>
     </item>
     <item row="0" column="1" >
      <widget class="QGroupBox" name="m_directionGroupBox" >
       <property name="whatsThis" >
        <string>Direction where &lt;b>XINX&lt;/b> must go for search string.</string>
       </property>
       <property name="title" >
        <string>Direction</string>
       </property>
       <layout class="QVBoxLayout" >
        <property name="spacing" >
         <number>6</number>
        </property>
        <property name="leftMargin" >
         <number>9</number>
        </property>
        <property name="topMargin" >
         <number>9</number>
        </property>
        <property name="rightMargin" >
         <number>9</number>
        </property>
        <property name="bottomMargin" >
         <number>9</number>
        </property>
        <item>
         <widget class="QRadioButton" name="m_UpRadioButton" >
          <property name="text" >
           <string>Go up</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="m_DownRadioButton" >
          <property name="text" >
           <string>Go down</string>
          </property>
          <property name="checked" >
           <bool>true</bool>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item row="1" column="2" >
      <spacer>
       <property name="orientation" >
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" >
        <size>
         <width>20</width>
         <height>40</height>
        </size>
       </property>
      </spacer>
     </item>
     <item row="0" column="2" >
      <widget class="QGroupBox" name="m_selectionGroupBox" >
       <property name="whatsThis" >
        <string>If &lt;i>All&lt;/i> is checked &lt;b>XINX&lt;/b> search in the whole document, else &lt;b>XINX&lt;/b> search only in the selection.</string>
       </property>
       <property name="title" >
        <string>Extend</string>
       </property>
       <layout class="QVBoxLayout" >
        <property name="spacing" >
         <number>6</number>
        </property>
        <property name="leftMargin" >
         <number>9</number>
        </property>
        <property name="topMargin" >
         <number>9</number>
        </property>
        <property name="rightMargin" >
         <number>9</number>
        </property>
        <property name="bottomMargin" >
         <number>9</number>
        </property>
        <item>
         <widget class="QRadioButton" name="m_searchAllRadioButton" >
          <property name="text" >
           <string>All</string>
          </property>
          <property name="checked" >
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="m_searchSelectionRadioButton" >
          <property name="text" >
           <string>Selection</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item rowspan="2" row="0" column="0" >
      <widget class="QGroupBox" name="groupBox" >
       <property name="title" >
        <string>Options</string>
       </property>
       <layout class="QVBoxLayout" >
        <property name="spacing" >
         <number>6</number>
        </property>
        <property name="leftMargin" >
         <number>9</number>
        </property>
        <property name="topMargin" >
         <number>9</number>
        </property>
        <property name="rightMargin" >
         <number>9</number>
        </property>
        <property name="bottomMargin" >
         <number>9</number>
        </property>
        <item>
         <widget class="QCheckBox" name="m_caseCheckBox" >
          <property name="whatsThis" >
           <string>If checked, &lt;b>XINX&lt;/b> search the case sensitive string.</string>
          </property>
          <property name="text" >
           <string>Match c&amp;ase</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="m_fromStartCheckBox" >
          <property name="whatsThis" >
           <string>If checked, &lt;b>XINX&lt;/b> search the word from the start of the document, else &lt;b>XINX&lt;/b> search from the cursor position.</string>
          </property>
          <property name="text" >
           <string>Search from &amp;start</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="m_wholeWordsCheckBox" >
          <property name="whatsThis" >
           <string>If unchecked, &lt;b>XINX&lt;/b> search string include in other word, else only whole word is searched.</string>
          </property>
          <property name="text" >
           <string>&amp;Whole words</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="m_regularExpressionCheckBox" >
          <property name="whatsThis" >
           <string>If checked, &lt;b>XINX&lt;/b> use regular expression to match string.</string>
          </property>
          <property name="text" >
           <string>&amp;Use regular expression</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" >
     <property name="spacing" >
      <number>6</number>
     </property>
     <property name="leftMargin" >
      <number>0</number>
     </property>
     <property name="topMargin" >
      <number>0</number>
     </property>
     <property name="rightMargin" >
      <number>0</number>
     </property>
     <property name="bottomMargin" >
      <number>0</number>
     </property>
     <item>
      <spacer>
       <property name="orientation" >
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" >
        <size>
         <width>131</width>
         <height>31</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="m_findButton" >
       <property name="text" >
        <string>&amp;Find</string>
       </property>
       <property name="icon" >
        <iconset resource="../application.qrc" >:/images/find.png</iconset>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="m_closeButton" >
       <property name="text" >
        <string>&amp;Close</string>
       </property>
       <property name="icon" >
        <iconset resource="../application.qrc" >:/images/button_cancel.png</iconset>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>m_comboFind</tabstop>
  <tabstop>m_replaceCheckBox</tabstop>
  <tabstop>m_comboReplace</tabstop>
  <tabstop>m_caseCheckBox</tabstop>
  <tabstop>m_fromStartCheckBox</tabstop>
  <tabstop>m_wholeWordsCheckBox</tabstop>
  <tabstop>m_regularExpressionCheckBox</tabstop>
  <tabstop>m_UpRadioButton</tabstop>
  <tabstop>m_DownRadioButton</tabstop>
  <tabstop>m_searchAllRadioButton</tabstop>
  <tabstop>m_searchSelectionRadioButton</tabstop>
  <tabstop>m_findButton</tabstop>
  <tabstop>m_closeButton</tabstop>
 </tabstops>
 <resources>
  <include location="../application.qrc" />
 </resources>
 <connections>
  <connection>
   <sender>m_findButton</sender>
   <signal>clicked()</signal>
   <receiver>ReplaceDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>444</x>
     <y>287</y>
    </hint>
    <hint type="destinationlabel" >
     <x>96</x>
     <y>254</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>m_closeButton</sender>
   <signal>clicked()</signal>
   <receiver>ReplaceDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>525</x>
     <y>287</y>
    </hint>
    <hint type="destinationlabel" >
     <x>179</x>
     <y>282</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>m_replaceCheckBox</sender>
   <signal>toggled(bool)</signal>
   <receiver>m_comboReplace</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>137</x>
     <y>48</y>
    </hint>
    <hint type="destinationlabel" >
     <x>398</x>
     <y>48</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>m_fromStartCheckBox</sender>
   <signal>toggled(bool)</signal>
   <receiver>m_DownRadioButton</receiver>
   <slot>setChecked(bool)</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>114</x>
     <y>154</y>
    </hint>
    <hint type="destinationlabel" >
     <x>291</x>
     <y>136</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>m_fromStartCheckBox</sender>
   <signal>toggled(bool)</signal>
   <receiver>m_searchAllRadioButton</receiver>
   <slot>setChecked(bool)</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>150</x>
     <y>152</y>
    </hint>
    <hint type="destinationlabel" >
     <x>406</x>
     <y>102</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>m_fromStartCheckBox</sender>
   <signal>toggled(bool)</signal>
   <receiver>m_UpRadioButton</receiver>
   <slot>setDisabled(bool)</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>193</x>
     <y>147</y>
    </hint>
    <hint type="destinationlabel" >
     <x>291</x>
     <y>107</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>m_fromStartCheckBox</sender>
   <signal>toggled(bool)</signal>
   <receiver>m_searchSelectionRadioButton</receiver>
   <slot>setDisabled(bool)</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>197</x>
     <y>157</y>
    </hint>
    <hint type="destinationlabel" >
     <x>421</x>
     <y>143</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>m_fromStartCheckBox</sender>
   <signal>toggled(bool)</signal>
   <receiver>m_regularExpressionCheckBox</receiver>
   <slot>setDisabled(bool)</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>75</x>
     <y>151</y>
    </hint>
    <hint type="destinationlabel" >
     <x>74</x>
     <y>210</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
